fixed_text_overflow_in_infoblock

--- a/src/components/CharCard/CharCard.module.scss
+++ b/src/components/CharCard/CharCard.module.scss
@@ -26,9 +26,13 @@
   flex-direction: column;
   justify-content: flex-start;
   row-gap: 8px;
+  max-width: 246px;
+  overflow: hidden;
 
   span {
     font-size: 18px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     white-space: nowrap;
     text-align: left;
   }
